# bamdam

./: .gitattributes  .gitignore  CHANGELOG.md  pyproject.toml
src/bamdam/: bamdam.py
