[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bamdam"
version = "0.1.0"
description = "A post-mapping, post-least-common-ancestor toolkit for ancient DNA analysis"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Bianca De Sanctis", email = "bddesanctis@gmail.com" }]
dependencies = ["pysam", "hyperloglog", "matplotlib", "tqdm"]

[project.scripts]
bamdam = "bamdam.bamdam:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bamdam"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
